# NearestPoints

./: CMakeLists.txt  README.md
include/static/: 3DMathOperations.h  GeometryObjects.h  NearestPointsAlgorithm.h
src/: 3DMathOperations.cpp  GeometryObjects.cpp  NearestPointsAlgorithm.cpp  main.cpp
test/: 3DMathTests.cpp  CMakeLists.txt  GeometryObjectsTests.cpp  NearestPointsAlgorithmTests.cpp
